--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json-server": "^0.17.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-material-ui-form-validator": "^3.0.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
@@ -31,7 +32,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "json:server": "json-server --watch db.json --port 3004"
   },
   "eslintConfig": {
     "extends": [
