--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
     "typescript-eslint-parser": "^22.0.0",
+    "validator": "^13.7.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
